@@ -14,7 +14,7 @@ _tmstatus.sh() {
     #   only the autocompletion with long options is implemented: long options are more readable and quick to enter since we are
     #   using autocompletion.
     #
-    opts="--log --help --quick --today --version"
+    opts="--log --help --quick --speed --today --version"
 
     if [[ ${cur} == -* || ${COMP_CWORD} -eq 1 ]]; then
         # shellcheck disable=2207
